--- a/DemoApp/Views/Popup/OderPage.xaml
+++ b/DemoApp/Views/Popup/OderPage.xaml
@@ -3,8 +3,11 @@
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
     xmlns="http://xamarin.com/schemas/2014/forms" CloseWhenBackgroundIsClicked="True" BackgroundColor="Transparent"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:xct="http://xamarin.com/schemas/2020/toolkit" xmlns:controls="clr-namespace:DemoApp.Controls"
-    x:Class="DemoApp.Views.Popup.OderPage" SystemPaddingSides="Top">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:markupextension="clr-namespace:DemoApp.Common.MarkupExtension"
+    xmlns:font="clr-namespace:DemoApp.Resources.Fonts"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit" xmlns:controls="clr-namespace:DemoApp.Controls"
+    x:Class="DemoApp.Views.Popup.OderPage" SystemPaddingSides="Top" x:Name="CurrentPopup">
     <pages:PopupPage.Animation>
         <animations:MoveAnimation
             DurationIn="300"
@@ -40,21 +43,26 @@
             <xct:TabViewItem TabIndex="0" Text="Món đang gọi" TextColor="White" FontSize="20" TextColorSelected="Orange"
                             FontAttributes="Bold" FontAttributesSelected="Bold" FontSizeSelected="20">
                 <Grid RowDefinitions="Auto,*,Auto" Padding="0,48,0,0" BackgroundColor="Black" RowSpacing="0">
-                    <Grid ColumnDefinitions="6*,2.5*,1.5*" BackgroundColor="Black" Padding="0,20" VerticalOptions="Start">
+                    <Grid ColumnDefinitions="5*,1*,2*,2*" BackgroundColor="Black" Padding="0,20" VerticalOptions="Start">
                         <Label Text="Tên món" Style="{StaticResource Title}"/>
-                        <Label Text="S/L" Style="{StaticResource Title}"  Grid.Column="1"/>
-                        <Label Text="Đơn giá" Style="{StaticResource Title}" Grid.Column="2"/>
+                        <Label Text="Ghi Chu" Style="{StaticResource Title}"  Grid.Column="1"/>
+                        <Label Text="S/L" Style="{StaticResource Title}"  Grid.Column="2"/>
+                        <Label Text="Đơn giá" Style="{StaticResource Title}" Grid.Column="3"/>
                     </Grid>
                     <CollectionView Grid.Row="1" ItemsSource="{Binding Ordering}" BackgroundColor="White">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                <Grid ColumnDefinitions="6*,2.5*,1.5*" BackgroundColor="Black" Padding="0,20"
+                                <Grid ColumnDefinitions="5*,1*,2*,2*" BackgroundColor="Black" Padding="0,20"
                                       VerticalOptions="Start">
                                     <Label Text="{Binding Tittle}" Style="{StaticResource Title}"/>
                                     <!--<Label Grid.Column="1" Text="{Binding SoLuong}" Style="{StaticResource Title}"/>-->
-                                    <controls:StepperControl Grid.Column="1" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEventAsync" FontSizeValue="20"
+                                    <Button Text="{markupextension:PlatformAwesomeFontFamilyMarkup Icon=Paperclip,Text='{0}'}" FontFamily="{x:Static font:FontAssembly.SolidStyle}"
+                                            BackgroundColor="Transparent" Grid.Column="1" FontSize="20" TextColor="White"
+                                            Command="{Binding Source={Reference CurrentPopup},Path=BindingContext.GhiChuCmd}"
+                                            CommandParameter="{Binding .}"/>
+                                    <controls:StepperControl Grid.Column="2" Value="{Binding SoLuong}" TapEvent="StepperControl_TapEventAsync" FontSizeValue="20"
                                                              TextColorValue="White" HorizontalOptions="Center"/>
-                                    <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="2"/>
+                                    <Label Text="{Binding Price}" Style="{StaticResource Title}" Grid.Column="3"/>
                                 </Grid>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
