--- a/DemoApp/Views/RegistratCredit/ContractCreditPage.xaml
+++ b/DemoApp/Views/RegistratCredit/ContractCreditPage.xaml
@@ -18,17 +18,36 @@
                 <Button  x:Name="btnNavBarBack"  Grid.Column="0"  Margin="0" Padding="0"  BackgroundColor="Transparent" Command="{Binding ClosePage}" FontFamily="{x:Static  font:FontAssembly.SolidStyle}"
                          FontSize="18" Text="{markup:PlatformAwesomeFontFamilyMarkup Icon=ChevronLeft, Text='{0}'}" TextColor="White" VerticalOptions="Center" WidthRequest="45"  />
                 <Label x:Name="lblNavTitle" Grid.Column="1"  TextColor="White" FontFamily="{x:Static font:FontAssembly.NunitoSemiBold}"  FontSize="16"
-                       Text="Danh sách hồ sơ" VerticalOptions="Center" />
-            </Grid>
-            <CollectionView Grid.Row="2" SelectionMode="None" ItemsSource="{Binding Images}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Frame CornerRadius="10" Padding="0" HasShadow="False">
-
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+                       Text="Bổ sung hợp đồng" VerticalOptions="Center" />
+            </Grid> 
+             <StackLayout Grid.Row="2">
+                 <Grid HeightRequest="90" Padding="10,0" Margin="0,10,0,0">
+                     <Frame x:Name="btnChupAnh" Grid.Column="0" Padding="15" Margin="2,5" CornerRadius="10" xct:TouchEffect.PressedOpacity="0.7" xct:TouchEffect.Command="{Binding ThemAnh}"  HasShadow="{OnPlatform Android=True,iOS=False}"
+                           xct:TouchEffect.NormalOpacity="1">
+                            <Label Text="Chụp Ảnh" TextColor="{StaticResource ThemeTextColor}" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                     </Frame>
+                     <Frame x:Name="btnChonAnh" Grid.Column="1" Padding="15" Margin="2,5" CornerRadius="10" xct:TouchEffect.PressedOpacity="0.7" xct:TouchEffect.Command="{Binding ChonAnh}"  HasShadow="{OnPlatform Android=True,iOS=False}"
+                           xct:TouchEffect.NormalOpacity="1">
+                            <Label Text="Chọn Ảnh" TextColor="{StaticResource ThemeTextColor}" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                     </Frame>
+                    </Grid>
+                 <CollectionView  SelectionMode="None" ItemsSource="{Binding Images}" VerticalOptions="FillAndExpand">
+                     <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Padding="10,10" HorizontalOptions="Start" WidthRequest="250">
+                                 <Frame CornerRadius="10" Padding="0" HasShadow="False" HeightRequest="500">
+                                     <Image Source="{Binding Hinh}" Aspect="Fill" VerticalOptions="Fill"  HorizontalOptions="Start"/>
+                                 </Frame>
+                                <Label Text="{markup:PlatformAwesomeFontFamilyMarkup Icon=TimescircleX,Text='{0}'}" FontFamily="{x:Static font:FontAssembly.SolidStyle}" TextColor="{StaticResource ThemeMainColor}" 
+                                           VerticalOptions="Start" HorizontalOptions="End" Padding="10" FontSize="22" Margin="0,5,5,0" xct:TouchEffect.CommandParameter="{Binding .}"
+                                           xct:TouchEffect.Command="{Binding Source={Reference CurrentPage},Path=BindingContext.XoaAnh}"/>
+                            </Grid>
+                        </DataTemplate>
+                     </CollectionView.ItemTemplate>
+                 </CollectionView>
+             </StackLayout>
+             <Button Grid.Row="3" Text="Bổ sung" TextColor="White" Margin="10" CornerRadius="5" Command="{Binding DangKy}"
+                    BackgroundColor="{StaticResource ThemeMainColor}"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
